2007-08-06  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: Added code to catch when a new contact is
	  requesting to enable chat with the current user.  the list is
	  updated

2007-08-06  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs, Banter/GroupWindow.cs, Banter/Conversation.cs:
	  added code to invite someone to the current user's roster

2007-08-06  Calvin Gaisford <calvinrg@gmail.com> 

	* ChangeLog, Banter/ChatWindow.cs, Banter/PersonCard.cs: Applied patch
	  from Johnny Jacob <jjohnny@svn.gnome.org>

2007-08-06  Johnny Jacob <jjohnny@svn.gnome.org>

	* Banter/PersonCard.cd : Added a property to set/get TextChat
	button's visibility.
	* Banter/ChatWindow.cs : Hide 'TextChat' Button.
	
2007-08-06  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: Bumped version for 0.1.10 iteration

2007-08-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/banter.in: Removed mozilla initialization code
	* NEWS: Updated for the 0.1.9 release

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUserManager.cs: Added a ProviderUserRemoved event to
	  remove the user in the UI too
	* Banter/PersonManager.cs: Fixed removal code so a person get's removed
	  from the model
	* Banter/PersonView.cs: spacing
	* Banter/PersonSync.cs: Added handlers for a personRemoved event

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Updated notification so you don't get a
	  notification for each message updated when a window firsts opens

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Fixed up data integrity problems between Person and
	  ProviderUser
	* Banter/PersonManager.cs: Called model updates on the gui thread and
	  protected the model
	* Banter/PersonView.cs: Removed code that messed with me in the model
	  since me shouldn't even be in there, it was handled at the model
	  layer

2007-08-03  Brady Anderson <brady.anderson@gmail.com> 
